<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">养老评估</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_error">"手势密码不对"</string>

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    
    
    <string-array name="action_list">
        <item>ELeven_1</item>
        <item>Eleven_2</item>
        <item>ELeven_3</item>
    </string-array>

    <string name="title_activity_test_action_bar">TestActionBarActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_cdd_main">CddMainActivity</string>
    
    <string name="activity_main_home_tabs_home">首页</string>
    <string name="activity_main_home_tabs_assess">评估</string>
    <string name="activity_main_home_tabs_report">统计</string>
    <string name="activity_main_home_tabs_sync">同步</string>
    <string name="activity_main_home_assess_tabs_doingtask">评估任务</string>
    <string name="activity_main_home_assess_tabs_donetask">已完成评估</string>
    
    <string name="activity_login_title">上海市浦东新区老年照护等级评估</string>
    <string name="activity_main_assess_btn_back">返回</string>
    
    <string name="fragment_assess_title">上海市老年照护等级评估表</string>
    <string name="fragment_assess_new_item1">申请人姓名</string>
    <string name="fragment_assess_new_item2">区县/街镇</string>
    <string name="fragment_assess_new_item3">评估表编号</string>
    <string name="fragment_assess_new_item4">评估类别</string>
    <string name="fragment_assess_new_item5">评估次数</string>
    <string name="fragment_assess_new_item6">上次评估日期</string>
    <string name="fragment_assess_new_item7">本次评估日期</string>
    <string name="fragment_assess_new_item8">评估员姓名</string>
    
    <string name="fragment_assess_personal_item1">姓名</string>
	<string name="fragment_assess_personal_item2">身份证号码</string>
	<string name="fragment_assess_personal_item3">性别</string>
	<string name="fragment_assess_personal_item4">社保卡号</string>
	<string name="fragment_assess_personal_item5">民族</string>
	<string name="fragment_assess_personal_item6">文化程度</string>
	<string name="fragment_assess_personal_item7">出生年月</string>
	<string name="fragment_assess_personal_item8">曾从事职业</string>
	<string name="fragment_assess_personal_item9">籍贯</string>
	<string name="fragment_assess_personal_item10">婚姻状况</string>
	<string name="fragment_assess_personal_item11">户籍所在地</string>
	<string name="fragment_assess_personal_item12">居住地址</string>
	<string name="fragment_assess_personal_item13">邮编</string>
	<string name="fragment_assess_personal_item14">邮编</string>
	<string name="fragment_assess_personal_item15">住宅电话</string>
	<string name="fragment_assess_personal_item16">移动电话</string>
	<string name="fragment_assess_personal_item17">代理人姓名</string>
	<string name="fragment_assess_personal_item18">与申请人关系</string>
	<string name="fragment_assess_personal_item19">代理人地址</string>
	<string name="fragment_assess_personal_item20">邮编</string>
	<string name="fragment_assess_personal_item21">住宅电话</string>
	<string name="fragment_assess_personal_item22">移动电话</string>

    
    
    
    <string name="assess_title_new">评估信息</string>
    <string name="assess_title_cogn">认知能力评估</string>
    <string name="assess_title_emot">情绪行为评估</string>
    <string name="assess_title_living">目前生活状况</string>
    <string name="assess_title_person">个人资料</string>
    <string name="assess_title_selfcare">生活自理能力评估</string>
    <string name="assess_title_service">养老服务建议</string>
    <string name="assess_title_social">社会生活环境</string>
    <string name="assess_title_visual">视觉评估</string>
    
    <string name="fragment_home_report_title">工作量统计</string>
    <string name="fragment_home_report_info">感谢您的辛勤付出</string>
    <string name="fragment_home_report_caseinfo">全年累计评估案例</string>
    <string name="fragment_home_report_m1">1月</string>
    <string name="fragment_home_report_m2">2月</string>
    <string name="fragment_home_report_m3">3月</string>
    <string name="fragment_home_report_m4">4月</string>
    <string name="fragment_home_report_m5">5月</string>
    <string name="fragment_home_report_m6">6月</string>
    <string name="fragment_home_report_m7">7月</string>
    <string name="fragment_home_report_m8">8月</string>
    <string name="fragment_home_report_m9">9月</string>
    <string name="fragment_home_report_m10">10月</string>
    <string name="fragment_home_report_m11">11月</string>
    <string name="fragment_home_report_m12">12月</string>

</resources>
