<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:eca="http://schemas.android.com/apk/res/com.yrkj.elderlycareassess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    
    tools:context="com.yrkj.elderlycareassess.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/layoutUserHeaderInfoContainerView"
        style="@style/activity_setting_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <fragment
            android:name="com.yrkj.elderlycareassess.fragment.UserHeaderInfoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        style="@style/activity_setting_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_weight="1"
        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtReportInfoView"
            style="@style/fragment_home_text_report_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtReportTitleView"
            android:layout_below="@id/txtReportTitleView"
            android:text="@string/fragment_home_report_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/fragment_home_text_report_caseinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_report_caseinfo" />

                <TextView
                    android:id="@+id/txtReportTotleCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="63"
                    android:textColor="#c9f15d"
                    android:textSize="150sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/fragment_home_text_report_caseinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="全年累计上门共走行程" />

                <RelativeLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:gravity="bottom"
                    android:id="@+id/txtReportTotleDistanceCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_centerInParent="true"
                    android:textColor="#c9f15d"
                    android:textSize="150sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_marginBottom="35dip"
                    android:layout_toRightOf="@id/txtReportTotleDistanceCountView"
                    android:layout_alignBottom="@id/txtReportTotleDistanceCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="km"
                    android:textColor="#c9f15d"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/fragment_home_text_report_caseinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="您的评估工作量" />

                <TextView
                    android:id="@+id/txtReportTotleCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12%"
                    android:textColor="#c9f15d"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutReportTotleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingBottom="4dip" >
 			<com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC1View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m1" />

            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC2View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vColor="#E1F8A3"
                eca:vText="@string/fragment_home_report_m2" />

            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC3View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m3" />

            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC4View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vColor="#E1F8A3"
                eca:vText="@string/fragment_home_report_m4" />

            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC5View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m5" />

            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC6View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vColor="#E1F8A3"
                eca:vText="@string/fragment_home_report_m6" />

            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC7View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m7" />
            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC8View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m8" />
            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC9View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m9" />
            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC10View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m10" />
            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC11View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m11" />
            <com.yrkj.elderlycareassess.widget.UIReportCount
                android:id="@+id/uctrlRC12View"
                style="@style/fragment_home_text_report_Count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                eca:vText="@string/fragment_home_report_m12" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>